--- a/client/src/index.css
+++ b/client/src/index.css
@@ -296,7 +296,7 @@ img {
 }
 /* HEADER STYLES */
 .main-header {
-    background-color: var(--blue);
+    background-color: var(--white);
     padding: 35px 0 0 0;
 }
 
@@ -362,7 +362,7 @@ img {
 
 .nav-link {
     display: block;
-    color: var(--white);
+    color: var(--black);
     padding: 20px 30px;
     text-decoration: none;
     border-bottom: 2px solid transparent;
@@ -838,19 +838,10 @@ img {
 }
 
 .home-banner:after {
-    /* From https://css.glass */
-    /* background: rgba(255, 255, 255, 0.2); */
     background: rgba(240, 93, 31, 0.8);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(0.1px);
     -webkit-backdrop-filter: blur(0.1px);
-    /* border: 1px solid rgba(255, 255, 255, 0.3); */
-    /* background-color: rgba(0, 46, 109, 0.7); */
-    /* background-color: rgba(240, 93, 31, 0.85); */
-    /* background-color: rgba(240, 93, 31, 0.8); */
-    /* background-color: rgba(243, 125, 75, 0.9); */
-    /* backdrop-filter: blur(0.5px); */
-    /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.3); */
     content: '';
     display: inline-block;
     height: 100%;
