--- a/client/src/index.css
+++ b/client/src/index.css
@@ -322,6 +322,11 @@ img {
     padding: 0 35px;
 }
 
+.header-image-container {
+    display: flex;
+    flex-direction: row;
+}
+
 .header-image {
     width: 300px;
     height: auto; /* This allows the image to be responsive */
