--- a/client/src/index.css
+++ b/client/src/index.css
@@ -324,7 +324,7 @@ img {
 .header-image-container {
     display: flex;
     flex-direction: row;
-    align-items: center;
+
 }
 
 .header-image {
@@ -396,6 +396,10 @@ img {
     padding: 18px;
     text-decoration: none;
     border-bottom: 2px solid transparent;
+}
+
+.nav-link:hover {
+    background-color: rgba(240, 93, 31, 0.3);
 }
 
 .sub-link.mobile-nav-link {
@@ -641,15 +645,25 @@ img {
 .section-title {
     margin: 30px auto;
     text-align: center;
-    padding: 10px 15px;
-    font-size: 2.5rem;
-    max-width: 600px;
+    /* padding: 10px 15px; */
+    font-size: 3rem;
+    max-width: 740px;
+    color: white;
 }
 
-.home-team,
-.home-locations {
+.follow-us-title {
+    margin: 30px auto;
+    text-align: center;
+    padding: 10px 15px;
+    font-size: 3rem;
+    max-width: 840px;
+    color: white;
+}
+
+.home-team {
     align-items: center;
     /* background: url(https://i.imgur.com/77LJQ2y.webp) 0 0 no-repeat; */
+    background: rgb(243, 74, 2);
     background-position: 50%;
     background-size: cover;
     color: #fff;
@@ -659,25 +673,66 @@ img {
     overflow: hidden;
     padding: 60px;
     position: relative;
-    min-height: 600px;
+    max-height: 300px;
+}
+.home-locations {
+    align-items: center;
+    /* background: url(https://i.imgur.com/77LJQ2y.webp) 0 0 no-repeat; */
+    background-color: rgb(80, 80, 80);
+    background-position: 50%;
+    background-size: cover;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+    padding: 60px;
+    position: relative;
+    min-height: 500px;
 }
 
 .home-locations {
     /* background: url(https://i.imgur.com/pP2cSdc.webp) 0 0 no-repeat; */
+    border-bottom: solid 5px rgb(243,74, 2);
 }
 
 .location-icon-container {
-    padding: 70px 0 50px 0;
-    color: var(--yellow);
+    /* padding: 40px 0 0 0; */
+    color: rgb(243, 74, 2);
     text-align: center;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
+.team-icon-container {
+    padding: 0 0 50px 0;
+    color: white;
+    text-align: center;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.team-icon-container a {
+    display: inline-block;
+    margin: 0 10px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.team-icon-container a:hover {
+    opacity: 60%;
+    transform: translateY(-5px) scale(1.1);
+}
+
+.team-icon-container a:active {
+    transform: translateY(2px) scale(0.95);
+}
+
 .location-icon-container .fas {
-    padding: 10px;
-    font-size: 60px;
+    padding: 6px;
+
+    
 }
 
 /* REVIEWS */
@@ -842,7 +897,7 @@ img {
     display: none;
     position: absolute;
     font-size: 35px;
-    color: var(--white);
+    color: var(--grey-dark);
     background: none;
     border: none;
     right: 10px;
@@ -859,16 +914,16 @@ img {
     display: flex;
     flex-direction: column;
     height: 100%;
-    justify-content: space-evenly;
+    justify-content: center;
     min-height: inherit;
-    padding: 35px;
+    padding: 55px;
     position: relative;
     width: 50%;
     z-index: 1;
 }
 
 .home-banner:after {
-    background: rgba(240, 93, 31, 0.8);
+    background: rgba(243, 74, 2, 0.8);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(0.1px);
     -webkit-backdrop-filter: blur(0.1px);
@@ -878,17 +933,42 @@ img {
     left: -200px;
     position: absolute;
     top: 0;
-    -webkit-transform: skew(-20deg);
-    transform: skew(-20deg);
-    width: calc(100% + 300px);
+    -webkit-transform: skew(-18deg);
+    transform: skew(-18deg);
+    width: calc(100% - 160px);
+    min-width: 720px;
     z-index: -1;
+
+}
+
+.banner-title-container {
+    /* width: 40%; */
+}
+
+.banner-title {
+    font-size: 3rem;
+    padding: 0px;
+    margin: 0px
+}
+
+.banner-description {
+    width: 450px;
 }
 
 .home-banner .btn {
-    padding: 20px 8px;
-    width: 150px;
+           /* T   R    B    L  */
+    padding: 10px 20px 10px 20px;
     text-align: center;
     margin: 0 0 10px 0;
+    background-color: var(--white);
+    border: none;
+    text-transform: uppercase;
+    font-size: 1rem;
+}
+
+#banner-btn-arrow {
+    padding: 0px 0px 0px 20px;
+    align-self: center;
 }
 
 @media (min-width: 1025px) {
@@ -1062,6 +1142,9 @@ img {
 }
 
 @media (max-width: 768px) {
+    .header-image-container {
+        display: block;
+    }
     .header-image {
         margin: 0 auto 20px auto;
     }
@@ -1115,7 +1198,9 @@ img {
 
     .home-banner {
         width: 100%;
-        display: block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .home-banner:after {
@@ -1125,9 +1210,17 @@ img {
         width: 100%;
     }
 
-    .banner-title {
-        font-size: 25px;
+    .banner-title-container {
+        display: flex;
+        flex-direction: row;
+        margin-top: -100px;
     }
+
+    .banner-title {
+        font-size: 30px;
+        padding-right: 5px;
+    }
+    
 
     .header-buttons-container {
         margin: 0;
