--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1158,8 +1158,12 @@ img {
         font-size: 35px;
     }
 
+    .follow-us-title {
+        font-size: 35px;
+    }
+
     .location-icon-container .fas {
-        font-size: 30px;
+        font-size: 40px;
     }
 
     .header-top {
@@ -1221,6 +1225,9 @@ img {
         padding-right: 5px;
     }
     
+    .banner-description {
+        padding: 20px 10px 20px 10px;
+    }
 
     .header-buttons-container {
         margin: 0;
