--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1157,6 +1157,7 @@ img {
         background-color: rgba(0, 0, 0, 0.5);
         text-align: center;
         font-weight: bold;
+        font-size: 0.7rem;
         position: relative;
         z-index: 1;
     }
