added min-width none to banner after in mobile view 700px

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1257,6 +1257,7 @@ img {
         -webkit-transform: skew(0deg);
         transform: skew(0deg);
         width: 100%;
+        min-width: none;
     }
 
     .banner-title-container {
