--- a/client/src/index.css
+++ b/client/src/index.css
@@ -447,14 +447,22 @@ img {
     display: none;
     position: absolute;
     background-color: var(--white);
-    min-width: 300px;
+    min-width: 360px;
     z-index: 2;
 }
 
+.submenu-list {
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(2, minmax(0, 1fr)); /* Two columns */
+    grid-gap: 0px; /* Adjust the gap between items */
+}
+
 .sub-link {
-    padding: 20px;
+    padding: 18px;
     text-decoration: none;
     border-bottom: 1px solid var(--grey-light);
+    font-size: 0.8rem;
 }
 
 .sub-link:active {
@@ -1120,7 +1128,8 @@ img {
     }
 
     .sub-link {
-        padding: 20px 40px;
+        padding: 20px 25px;
+        font-size: 0.75rem;
     }
 
     /*MOBILE MENU CONTROLS */
