--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,7 +27,10 @@ body {
     padding: 0;
     margin: 0;
     font-size: 18px;
-    background-color: rgb(80, 80, 80);
+    background: grey;
+    /* background-image: url('/public/CaliBackground.jpg'); */
+    /* background-size: cover; */
+    /* background-attachment: fixed; */
 }
 
 a,
@@ -605,7 +608,7 @@ img {
 
 .home-expertise .fas {
     color: rgb(243,74, 2);
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 
 .expertise-header {
@@ -626,14 +629,18 @@ img {
     flex-wrap: wrap;
     justify-content: center; /* Center items horizontally */
     gap: 10px; /* Adjust spacing between items */
-    padding: 30px 0px 0px 0px;
+    padding: 60px 0px 0px 0px;
 }
 
 .expertise-name {
     font-weight: bold;
-    font-size: 0.95rem;
-    padding: 10px 0px 0px 0px;
+    font-family: Roboto;
+    font-size: 1rem;
+    padding: 15px 0px 15px 0px;
+    display: flex;
+    justify-content: center;
     text-decoration: none;
+    letter-spacing: 0.05rem;
 }
 
 .link-item {
@@ -644,9 +651,9 @@ img {
 }
 
 .expertise-item {
-    width: calc(100% / 5);
-    margin: 20px 0px 0px 0px;
-    padding: 0px 0px 10px 0px;
+    width: calc(88% / 5);
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -701,6 +708,7 @@ img {
     text-align: center;
     /* padding: 10px 15px; */
     font-size: 3rem;
+    font-family: Roboto;
     max-width: 740px;
     color: white;
 }
@@ -1044,10 +1052,6 @@ img {
     .mobile-show {
         display: block;
     }
-    .expertise-item {
-        width: calc(100% / 2);
-        padding: 40px;
-    }
 
     .expertise-header-description {
         width: auto;
@@ -1220,7 +1224,11 @@ img {
     }
 
 }
-
+@media (max-width: 850px) {
+    .expertise-item {
+        width: calc(90% / 3)
+    }
+}
 @media (max-width: 768px) {
     .header-image-container {
         display: block;
