--- a/client/src/index.css
+++ b/client/src/index.css
@@ -27,6 +27,8 @@ body {
     padding: 0;
     margin: 0;
     font-size: 18px;
+    background-color: #f6f6f6;
+
 }
 
 a,
@@ -420,6 +422,8 @@ img {
     padding: 18px;
     text-decoration: none;
     border-bottom: 2px solid transparent;
+    font-family: sans-serif;
+    font-size: 0.9em;
 }
 
 .nav-link:hover {
@@ -446,7 +450,7 @@ img {
     display: none;
     position: absolute;
     background-color: var(--white);
-    min-width: 360px;
+    min-width: 538px;
     z-index: 2;
 }
 
@@ -455,13 +459,14 @@ img {
     align-items: center;
     grid-template-columns: repeat(2, minmax(0, 1fr)); /* Two columns */
     grid-gap: 0px; /* Adjust the gap between items */
+    padding: 10px;
 }
 
 .sub-link {
-    padding: 18px;
+    padding: 15px 20px 15px 30px;
     text-decoration: none;
     border-bottom: 1px solid var(--grey-light);
-    font-size: 0.8rem;
+    font-size: 1rem;
 }
 
 .sub-link:active {
@@ -470,7 +475,7 @@ img {
 
 .sub-link:hover,
 .sub-link.active {
-    background-color: var(--grey-light);
+    background-color: rgba(240, 93, 31, 0.3);
 }
 
 /* END NAVBAR STYLES */
@@ -591,6 +596,12 @@ img {
     color: blue;
     text-decoration: underline; /* Optional: Add underline to indicate it's a link */
 }
+.popout-content {
+    border-radius: 1px;
+    box-shadow: 0.5px 0.5px 214px rgba(0,0,0,.1);
+    margin: 20px 0;
+    padding: 10px 20px;
+}
 /* END PAGES STYLES */
 
 /* EXPERTISE STYLES */
@@ -612,9 +623,11 @@ img {
 }
 
 .expertise-header {
-    margin: 50px 0px 0px 0px;
+    margin: 50px 25px 25px 25px;
     text-align: center;
     color: var(--white);
+    font-size: 3rem;
+    font-family: sans-serif;
 }
 
 .expertise-header-description {
@@ -622,6 +635,7 @@ img {
     margin: 20px auto;
     text-align: center;
     font-weight: 500;
+    color: white;
 }
 
 .expertise-grid {
@@ -987,7 +1001,7 @@ img {
 }
 
 .home-banner:after {
-    background: rgba(243, 74, 2, 0.7);
+    background: rgba(243, 74, 2, 0.6);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(0.1px);
     -webkit-backdrop-filter: blur(0.1px);
@@ -997,10 +1011,10 @@ img {
     left: -200px;
     position: absolute;
     top: 0;
-    -webkit-transform: skew(-18deg);
+    -webkit-transform: skew(-19deg);
     transform: skew(-18deg);
     width: calc(100% - 160px);
-    min-width: 800px;
+    min-width: 840px;
     z-index: -1;
 
 }
