--- a/client/src/index.css
+++ b/client/src/index.css
@@ -451,16 +451,37 @@ img {
     display: none;
     position: absolute;
     background-color: var(--white);
-    min-width: 761px;
     z-index: 2;
 }
 
 .submenu-list {
+    min-width: 244px;
     display: grid;
     align-items: center;
-    grid-template-columns: repeat(3, minmax(0, 1fr)); /* Two columns */
     grid-gap: 0px; /* Adjust the gap between items */
     padding: 10px;
+    grid-template-columns: repeat(1, minmax(0, 1fr)); /* Initial three columns */
+
+}
+
+.submenu-two-column {
+    min-width: 527px;
+    display: grid;
+    align-items: center;
+    grid-gap: 0px; /* Adjust the gap between items */
+    padding: 10px;
+    grid-template-columns: repeat(2, minmax(0, 1fr)); /* Initial three columns */
+
+}
+
+.submenu-multi-column {
+    min-width: 860px;
+    display: grid;
+    align-items: center;
+    grid-gap: 0px; /* Adjust the gap between items */
+    padding: 10px;
+    grid-template-columns: repeat(4, minmax(0, 1fr)); /* Initial three columns */
+
 }
 
 .sub-link {
