--- a/client/src/index.css
+++ b/client/src/index.css
@@ -56,15 +56,18 @@ h5 {
 
 /*Temporary Fix*/
 /*Footer.js has span's instead of h4's for the temporary fix and added id h-four-temp-fix because className already present*/
-span#h-four-temp-fix {
+#h-four-temp-fix {
     margin: 0;
     margin-bottom: 1.38rem;
     font-weight: bold;
     line-height: 1.3;
     text-transform: capitalize;
-    /*-*-*Added*-*-*/
-    font-size: 1.1rem;
-    /*-*-*Added*-*-*/
+    font-size: 0.8rem;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    margin-top: 60px;
+    margin-bottom: -45px;
 }
 /*-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-*/
 
@@ -994,19 +997,26 @@ img {
 .footer-grid {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .footer-item {
-    width: calc(100% / 4);
+
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
 }
 
+.footer-item.two-columns {
+    width: calc(100% / 2); /* Two columns */
+}
+
 .footer-link {
     text-decoration: none;
     color: var(--white);
+    font-size: 1rem;
 }
 
 .footer-link:active {
@@ -1018,8 +1028,9 @@ img {
 }
 
 .footer-word-wrap {
-    font-size: 30px;
+    font-size: 1.2rem;
     line-height: 1.25;
+    align-self: center;
 }
 
 .mobile-menu-button {
