--- a/client/src/index.css
+++ b/client/src/index.css
@@ -62,12 +62,14 @@ h5 {
     font-weight: bold;
     line-height: 1.3;
     text-transform: capitalize;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
+    font-weight: 100;
     display: flex;
     align-items: flex-end;
     justify-content: center;
-    margin-top: 60px;
-    margin-bottom: -45px;
+    margin-top: 42px;
+    margin-bottom: -40px;
+    font-family: 'Times New Roman', Times, serif;
 }
 /*-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-**-*-*-*/
 
@@ -991,7 +993,8 @@ img {
 .main-footer {
     background-color: var(--black);
     color: var(--white);
-    padding: 60px 35px;
+    padding: 50px 25px;
+
 }
 
 .footer-grid {
@@ -1007,6 +1010,7 @@ img {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    align-self: baseline;
 }
 
 .footer-item.two-columns {
@@ -1016,7 +1020,7 @@ img {
 .footer-link {
     text-decoration: none;
     color: var(--white);
-    font-size: 1rem;
+    font-size: 0.9rem;
 }
 
 .footer-link:active {
@@ -1031,6 +1035,7 @@ img {
     font-size: 1.2rem;
     line-height: 1.25;
     align-self: center;
+    font-weight: 700;
 }
 
 .mobile-menu-button {
