--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1323,6 +1323,20 @@ display: none;
   align-items: center;
   justify-content: center;
 }
+#chat-box-button-ready {
+    display: flex;
+    padding: 8px 20px 8px 20px;
+    margin: 1.6rem;
+    border-radius: 8rem;
+    border: none;
+    background-color: rgba(243,74, 2, 100%);
+    color: black;
+    align-self: center;
+    font-size: 0.9rem;
+    opacity: 100%;
+    align-items: center;
+    justify-content: center;
+  }
 #error-div {
   animation-name: appear;
   animation-duration: 2s;
