made medium physician images

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -509,7 +509,7 @@ img {
 
 /* PAGES STYLES */
 .pages-header {
-    background-image: url(https://i.imgur.com/V3Vfsqi.webp);
+    background-image: url(https://i.imgur.com/mvgviR3.webp);
     background-size: contain;
     background-position: top;
     background-attachment: fixed;
