--- a/client/src/index.css
+++ b/client/src/index.css
@@ -525,6 +525,7 @@ img {
     transition: opacity 0.5s; /* Add a transition for opacity */
 }
 .form-title {
+    border-bottom: 1px solid var(--grey-light);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -534,7 +535,7 @@ img {
     align-self: center;
     padding: 0px 40px 0px 40px;
     margin: 30px 0px 0px 0px;
-    border-bottom: 1px solid var(--grey-light);
+
 }
 .title-request-appointment {
     display: flex;
@@ -599,6 +600,26 @@ img {
     display: inline-block;
     justify-self: baseline;
     margin-right: 8px; /* Adjust spacing between the circle and label text */
+}
+.select-location {
+    display: flex;
+    border: none;
+    /* padding: 0.5rem; */
+    border-radius: 10px;
+    background-color: rgba(192,200,200, 25%);
+    width: 99%;
+    min-height: 40px;
+    font-size: 1rem;
+    padding: 0px 10px 0px 10px;
+    cursor: pointer;
+    justify-content: center;
+    flex-direction: column;
+}
+.select-location-title-and-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
 .new-returning-div {
     display: flex;
@@ -716,6 +737,7 @@ img {
     color: var(--black);
     align-self: flex-start;
 }
+
 #location-dropdown {
     display: flex;
     font-size: 1rem;
@@ -1404,6 +1426,7 @@ display: none;
   transition: background-color 2.2s, opacity 6s;
   margin-bottom: 1.5vw;
   padding: 25px;
+  
 }
 #chat-top-component {
   display: flex;
