--- a/client/src/index.css
+++ b/client/src/index.css
@@ -537,6 +537,9 @@ img {
     margin: 30px 0px 0px 0px;
 
 }
+#provider-location:hover {
+    font-weight: 700;
+}
 .title-request-appointment {
     display: flex;
     font-weight: 600;
@@ -1628,6 +1631,9 @@ display: none;
   0% { opacity: 0; }
   100% { opacity: 1; }
 }
+#provider-location {
+    padding: 5px;
+}
 #chat-box-button-blue {
   display: flex;
   padding: 8px 20px 8px 20px;
@@ -2530,6 +2536,8 @@ display: none;
         font-size: 0.9rem;
     }
     #chatbox-div {
+        padding: 10px 10px 0px 10px;
+
         display: flex;
         flex-direction: column;
         /*    border-width:1px;*/
@@ -2570,9 +2578,17 @@ display: none;
     }
 }
 @media (max-width: 768px) {
+    #appointment-form {
+        height: 100vh;
+        width: 100vw;
+    }
+    #provider-location {
+        padding: 12px;
+    }
     .apt-line {
         flex-direction: column;
         text-align: left;
+        padding-right: 20px;
     }
     .pages-header {
         background-image: url(https://i.imgur.com/MdQsFeE.webp);
@@ -2720,10 +2736,19 @@ display: none;
 }
 
 @media (max-width: 576px) {
-    #appointment-form {
-        border-radius: 10px;
+    #chat-form-lines-request-apt {
+        width: 91%;
+        padding-right: 20px;
+
+    }
+    .apt-line {
+        flex-direction: column;
+        text-align: left;
+        padding-right: 20px;
         width: 90%;
-        height: 90%;
+    }
+    .radio-circle {
+        width: 30%;
     }
     .pages-header {
         background-size: cover;
