--- a/app/views/office_mailer/request_appointment_email.erb
+++ b/app/views/office_mailer/request_appointment_email.erb
@@ -4,7 +4,7 @@
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
 </head>
 <body>
-  <h2>New Contact Form Submission</h2>
+  <h2>New Request Appointment Form Submission</h2>
   <p><strong>First Name:</strong> <%= @form_data[:fName] %></p>
   <p><strong>Last Name:</strong> <%= @form_data[:lName] %></p>
   <p><strong>Email:</strong> <%= @form_data[:email] %></p>
