--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2533,6 +2533,9 @@ display: none;
 
 }
 @media (max-width: 1015px) {
+    .expertise-name {
+        font-size: 0.7rem;
+    }
     .about-title {
         /* padding: 55px 0px 0px 0px; */
         font-size: 2.5rem;
@@ -2564,7 +2567,7 @@ display: none;
 }
 @media (max-width: 850px) {
     .expertise-name {
-        font-size: 0.6rem;
+        font-size: 0.8rem;
     }
     .about-container-bottom {
         flex-direction: column;
