--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2596,6 +2596,9 @@ display: none;
     }
 }
 @media (max-width: 768px) {
+    .expertise-item {
+        width: 100%;
+    }
     #appointment-form {
         height: 100vh;
         width: 100vw;
