--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2353,6 +2353,9 @@ display: none;
     .header-title {
         display: none;
     }
+    .header-title-div {
+        display: none;
+    }
     .about-title-right {
         font-size: 2rem;
         width: 80%;
@@ -2540,7 +2543,25 @@ display: none;
     .pagination-arrow .fas:disabled {
         opacity: 0.7;
     }
-
+    .main-footer {
+        padding: 20px 0 20px 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .footer-grid {
+        margin: 0px 0px 40px 0px;
+        display: flex;
+        flex-direction: row;
+    }
+    .footer-link {
+        margin: 4px;
+    }
+    #h-four-temp-fix {
+        margin-top: auto;
+        margin-bottom: 0px;
+    }
 }
 @media (max-width: 1015px) {
     .expertise-name {
@@ -2670,6 +2691,9 @@ display: none;
     .header-top {
         display: block;
         text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .page-top-header {
@@ -2761,6 +2785,7 @@ display: none;
         width: 180px;
         left: -185px;
     }
+
 }
 
 @media (max-width: 576px) {
@@ -2780,7 +2805,20 @@ display: none;
     }
     .pages-header {
         background-size: cover;
-
+    }
+    .header-image-container {
+        /* margin: none; */
+        max-width: 200px;
+        display: flex;
+        align-items: center;
+        /* margin: 0 auto 0px auto; */
+    }
+    .logo-link {
+        max-width: 200px;
+        align-items: center;
+    }
+    .header-image {
+        max-width: 200px;
     }
     .grid-item {
         width: 100%;
