--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1828,7 +1828,7 @@ display: none;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url('/public/CaliBackground.jpg');
+    background-image: url('https://i.imgur.com/YA8w0SN.webp');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -1972,7 +1972,7 @@ display: none;
 .home-locations {
     align-items: center;
     /* background: url(https://i.imgur.com/77LJQ2y.webp) 0 0 no-repeat; */
-    background-image: url('/public/CaliBackground.jpg');
+    background-image: url('https://i.imgur.com/YA8w0SN.webp');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
