--- a/client/src/index.css
+++ b/client/src/index.css
@@ -169,7 +169,7 @@ img {
 .map-float-title {
     font-size: 16px;
     margin: 0 0 3px 0;
-    color:rgb(243, 74, 2);
+    color: #922C02;
 }
 
 .map-float-info {
