--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2830,4 +2830,19 @@ display: none;
     .mobile-menu-button {
         top: 15px;
     }
+    .header-button-yellow, .header-button-dark {
+        font-size: 0.8rem;
+    }
+}
+
+@media (max-width: 360px) {
+    .header-button-yellow, .header-button-dark {
+        font-size: 0.7rem;
+    }
+}
+
+@media (max-width: 270px) {
+    .header-button-yellow, .header-button-dark {
+        font-size: 0.5rem;
+    }
 }
