--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2626,6 +2626,7 @@ display: none;
 @media (max-width: 768px) {
     .expertise-item {
         width: 100%;
+        align-items: normal;
     }
     #appointment-form {
         height: 100vh;
